--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@angular/router": "^14.1.0",
     "country-to-currency": "^1.0.10",
     "rxjs": "~7.5.0",
+    "sweetalert2": "^11.7.20",
     "tslib": "^2.3.0",
     "zone.js": "~0.11.4"
   },
