--- a/angular.json
+++ b/angular.json
@@ -94,11 +94,60 @@
             ],
             "scripts": []
           }
+        },
+        "cypress-run": {
+          "builder": "@cypress/schematic:cypress",
+          "options": {
+            "devServerTarget": "assistence-travel-web-app:serve"
+          },
+          "configurations": {
+            "production": {
+              "devServerTarget": "assistence-travel-web-app:serve:production"
+            }
+          }
+        },
+        "cypress-open": {
+          "builder": "@cypress/schematic:cypress",
+          "options": {
+            "watch": true,
+            "headless": false
+          }
+        },
+        "ct": {
+          "builder": "@cypress/schematic:cypress",
+          "options": {
+            "devServerTarget": "assistence-travel-web-app:serve",
+            "watch": true,
+            "headless": false,
+            "testingType": "component"
+          },
+          "configurations": {
+            "development": {
+              "devServerTarget": "assistence-travel-web-app:serve:development"
+            }
+          }
+        },
+        "e2e": {
+          "builder": "@cypress/schematic:cypress",
+          "options": {
+            "devServerTarget": "assistence-travel-web-app:serve",
+            "watch": true,
+            "headless": false
+          },
+          "configurations": {
+            "production": {
+              "devServerTarget": "assistence-travel-web-app:serve:production"
+            }
+          }
         }
       }
     }
   },
   "cli": {
-    "analytics": "960dc1d2-6af8-4c09-b304-97ce8597df3d"
+    "analytics": "960dc1d2-6af8-4c09-b304-97ce8597df3d",
+    "schematicCollections": [
+      "@cypress/schematic",
+      "@schematics/angular"
+    ]
   }
 }
